--- a/3dplatformer/3dplatformer.vcxproj.filters
+++ b/3dplatformer/3dplatformer.vcxproj.filters
@@ -57,6 +57,9 @@
     <ClCompile Include="src\prop.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\debug_tools.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
@@ -111,6 +114,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="src\prop.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\debug_tools.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
