--- a/.gitignore
+++ b/.gitignore
@@ -392,3 +392,4 @@ MigrationBackup/
 # End of https://www.toptal.com/developers/gitignore/api/c++,visualstudio
 # custom gitignore
 placeholder/
+imgui.ini
