trying to fix collision detection

--- a/3dplatformer/packages.config
+++ b/3dplatformer/packages.config
@@ -6,6 +6,7 @@
   <package id="glm" version="0.9.9.800" targetFramework="native" />
   <package id="opengl_shader" version="2.0.0" targetFramework="native" />
   <package id="opengl_viewport" version="1.2.0" targetFramework="native" />
+  <package id="skia.native" version="1.1.0" targetFramework="native" />
   <package id="unofficial-flayan-glew" version="2.1.0" targetFramework="native" />
   <package id="unofficial-flayan-glew.redist" version="2.1.0" targetFramework="native" />
 </packages>
