--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "imgui/imgui"]
 	path = imgui/imgui
 	url = https://github.com/ocornut/imgui
+[submodule "third-party/json"]
+	path = third-party/json
+	url = https://github.com/nlohmann/json
