--- a/3dplatformer/3dplatformer.vcxproj
+++ b/3dplatformer/3dplatformer.vcxproj
@@ -99,7 +99,9 @@
     <ClCompile Include="src\graphics\framebuffer.cpp" />
     <ClCompile Include="src\graphics\graphics_types.cpp" />
     <ClCompile Include="src\graphics\opengl\opengl_framebuffer.cpp" />
+    <ClCompile Include="src\graphics\opengl\opengl_quad.cpp" />
     <ClCompile Include="src\graphics\opengl\opengl_texture.cpp" />
+    <ClCompile Include="src\graphics\quad.cpp" />
     <ClCompile Include="src\graphics\texture.cpp" />
     <ClCompile Include="src\input_manager.cpp" />
     <ClCompile Include="src\keyboard.cpp" />
@@ -124,7 +126,9 @@
     <ClInclude Include="include\components\components.h" />
     <ClInclude Include="include\graphics\graphics.h" />
     <ClInclude Include="include\graphics\opengl\opengl.h" />
+    <ClInclude Include="include\graphics\opengl\opengl_quad.h" />
     <ClInclude Include="include\graphics\opengl\opengl_texture.h" />
+    <ClInclude Include="include\graphics\quad.h" />
     <ClInclude Include="include\graphics\texture.h" />
     <ClInclude Include="include\includelist.h" />
     <ClInclude Include="include\main_module.h" />
@@ -163,6 +167,9 @@
   <ItemGroup>
     <None Include="models\skullbandana.fbx" />
     <None Include="packages.config" />
+    <None Include="shaders\2d\fragment.shader" />
+    <None Include="test_menu.json" />
+    <None Include="shaders\2d\vertex.shader" />
     <None Include="shaders\basic\fragment.shader" />
     <None Include="shaders\basic\vertex.shader" />
   </ItemGroup>
